--- a/views/about-us.html
+++ b/views/about-us.html
@@ -63,6 +63,11 @@
             <h3>Juan Gonzales</h3>
             <h5>Desarrollador Frontend</h5>
             <p>A person who tries hard even though he is not very intelligent, always practices and tries hard, a great partner who will have your back. !A great work partner¡</p>
+        <div>
+            <img src="assets/images/Fotos del equipo/IMG_0521-removebg-preview.png" alt="Foto de un integrante del equipo">
+            <h3>faryal chaudhry</h3>
+            
+        </div>
         </div>
     </main>
 
