--- a/views/about-us.html
+++ b/views/about-us.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/about-us.css">
     <title>About Us</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
         </nav>
     </header>
    
-    <main>
+    <div class="contenedorfotos">
         <div>
             <img src="/assets/images/Fotos del equipo/Jorge.png" alt="Foto de un integrante del equipo">
             <h3>Jorge Bastori</h3>
@@ -66,10 +67,10 @@
         <div>
             <img src="/assets/images/Fotos del equipo/IMG_0521-removebg-preview.png" alt="Foto de un integrante del equipo">
             <h3>faryal chaudhry</h3>
-            <p>Ella es una compañera muy disciplinada , siempre atenta al escuchar a los demás una confiable compañera de trabajo . !A great work partner¡</p>
+            <p>She is a very disciplined colleague , always attentive to listen to others a reliable co-worker. !A great work partner¡</p>
         </div>
         </div>
-    </main>
+    </div>
 
 
 
