--- a/views/instrument.html
+++ b/views/instrument.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/instruments.css">
     <title>Instruments</title>
 </head>
@@ -23,7 +23,9 @@
     </header>
     <main>
         <div class="contenedores">
-            <iframe  src="https://www.youtube.com/embed/3gZC5763wYk?si=W4FFARglyPJ0vaJi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div>
+                <iframe  src="https://www.youtube.com/embed/3gZC5763wYk?si=W4FFARglyPJ0vaJi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>    
             <h2>PIANO</h2>
             <p>The piano is a percussive stringed instrument with 24 keys that produces sound by striking strings with hammers. It is versatile and is used in various musical genres, allowing melodies and harmonies to be played at the same time, making it essential for performance and composition.</p>
             <button>TRY IT YOURSELF</button>
