--- a/views/instrument.html
+++ b/views/instrument.html
@@ -23,27 +23,30 @@
     </header>
     <main>
         <div class="contenedores">
+            <iframe  src="https://www.youtube.com/embed/3gZC5763wYk?si=W4FFARglyPJ0vaJi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div>
-                <iframe  src="https://www.youtube.com/embed/3gZC5763wYk?si=W4FFARglyPJ0vaJi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>    
-            <h2>PIANO</h2>
-            <p>The piano is a percussive stringed instrument with 24 keys that produces sound by striking strings with hammers. It is versatile and is used in various musical genres, allowing melodies and harmonies to be played at the same time, making it essential for performance and composition.</p>
-            <button>TRY IT YOURSELF</button>
-            <div class="Modal"></div>
+                <h2>PIANO</h2>
+                <p>The piano is a percussive stringed instrument with 24 keys that produces sound by striking strings with hammers. It is versatile and is used in various musical genres, allowing melodies and harmonies to be played at the same time, making it essential for performance and composition.</p>
+                <button>TRY IT YOURSELF</button>
+            </div>
         </div>
 
         <div class="contenedores">
             <iframe src="https://www.youtube.com/embed/2xc55G7vVxg?si=80ChZe_rNLkNNWXw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <h2>DRUM SET</h2>
-            <p>The drum set is a percussion instrument consisting of a set of drums and cymbals. It is played by striking the surfaces with drumsticks and is instrumental in setting the beat in various genres of music. The drum kit brings energy and structure to songs, and its versatility makes it essential in rock bands, jazz bands, pop bands and more.</p>
-            <button>TRY IT YOURSELF</button>
+            <div>
+                <h2>DRUM SET</h2>
+                <p>The drum set is a percussion instrument consisting of a set of drums and cymbals. It is played by striking the surfaces with drumsticks and is instrumental in setting the beat in various genres of music. The drum kit brings energy and structure to songs, and its versatility makes it essential in rock bands, jazz bands, pop bands and more.</p>
+                <button>TRY IT YOURSELF</button>
+            </div>    
         </div>
 
         <div class="contenedores">
             <iframe src="https://www.youtube.com/embed/lnrV4EFYxm4?si=1Lcr7LywYFgh1ao-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <h2>GUITAR</h2>
-            <p>The guitar is a stringed instrument, usually with six strings, played by plucking or strumming. There are acoustic guitars, which produce sound naturally, and electric guitars, which amplify it. It is versatile and is used in various musical genres, allowing melodies and chords to be played both solo and in ensemble.</p>
-            <button>TRY IT YOURSELF</button>
+            <div>
+                <h2>GUITAR</h2>
+                <p>The guitar is a stringed instrument, usually with six strings, played by plucking or strumming. There are acoustic guitars, which produce sound naturally, and electric guitars, which amplify it. It is versatile and is used in various musical genres, allowing melodies and chords to be played both solo and in ensemble.</p>
+                <button>TRY IT YOURSELF</button>
+            </div>    
         </div>
     </main>
 
