--- a/css/heroimage.css
+++ b/css/heroimage.css
@@ -13,27 +13,26 @@
     
 }
 
+
 .heroimage video {
-  
-    width: 600px;
-    height: 600px;
-    margin-bottom: 0;
-    margin-top: 0;
+    
+
   
     
 }
+ 
 
 .no-music{
     width: 30px;
     height: 30px;
-    display: flex;
-    justify-content: flex-end;
+    margin-top: 40vh;
+    position: relative;
     margin-left: auto;
+
+    
 }
 
 .go-home{
-    display: flex;
-    align-items: flex-end;
     width: 30px;
     height: 30px;
 }
@@ -60,3 +59,29 @@ text-align: center;
 padding: 10px;
 margin: 5px;
 }
+
+@media (min-width:800px){
+
+ 
+   .heroimage{
+    width: 100%;
+    
+   }
+
+    .heroimage video{
+    
+        width: 50%;
+    }
+
+
+
+.no-music{
+    
+
+    
+}
+
+
+
+}
+
