--- a/css/heroimage.css
+++ b/css/heroimage.css
@@ -4,7 +4,7 @@
 
 .heroimage{
     width: 100svh;
-    height: 100dvh;
+    height: 90dvh;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -25,8 +25,8 @@
 .no-music{
     width: 30px;
     height: 30px;
-    margin-top: 40vh;
     position: relative;
+    top: 27vh;
     margin-left: auto;
 
     
@@ -35,6 +35,8 @@
 .go-home{
     width: 30px;
     height: 30px;
+    position: relative;
+    top: 25vh;
 }
 
 .heroimage p{
@@ -48,7 +50,7 @@ main img{
     border-radius: 5px;
 }
 
-main p{
+.descripcion-grupo{
 border: 10px;
 border-radius: 5px;
 background-color: rgba(142, 209, 213, 0.6);
@@ -65,22 +67,32 @@ margin: 5px;
  
    .heroimage{
     width: 100%;
-    
+    height: 39em;
+
    }
 
     .heroimage video{
-    
-        width: 50%;
+      width: 30%;
+      
+      
+        
     }
 
+    .descripcion-grupo{
+        border: 10px;
+        border-radius: 5px;
+        background-color: rgba(142, 209, 213, 0.6);
+        position: relative;
+        bottom: 20vh;
+        width: 500px;
+        height: 15vh;
+        font-size: 22px;
+        left: 35vh;
+        padding: 20px;
+        font-family: "Neucha";
 
-
-.no-music{
-    
-
-    
-}
-
+        }
+        
 
 
 }
