JS del carrusel del About y estilo en los botones

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,9 +1,28 @@
 *{
     max-width: 100%;
 }
+
 .contenedorfotos{
     padding: 30px;
     background-color: #379FA5;
+    position: relative;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 65px;
+}
+
+.integrante{
+    height: 450px;
+}
+
+.contenedorfotos div{
+    display: none;
+
+}
+
+.contenedorfotos div.activo{
+    display: block;
 }
 
 .contenedorfotos p, h3, h5{
@@ -22,8 +41,8 @@
 
 .contenedorfotos p{
     font-size: 25px;
-    text-align: justify;
-    text-align-last: center;
+    text-align: center;
+    display: none;
 }
 
 button{
@@ -31,4 +50,31 @@ button{
     background: none;
     padding: 0; 
     cursor: pointer;
+}
+
+#retroceder,
+#avanzar {
+    position: absolute;
+}    
+
+#retroceder {
+    left: 10px;
+}
+
+#avanzar {
+    right: 10px;
+}
+
+
+@media (min-width: 800px) {
+
+    .contenedorfotos .activo {
+        display: flex; 
+        gap: 55px;
+        align-items: center;
+        justify-content: center;
+    }
+    .contenedorfotos .activo .elemento {
+        flex: 1 1 30%; 
+    }
 }
