--- a/views/about-us.html
+++ b/views/about-us.html
@@ -14,9 +14,9 @@
     <header>
         <div class="contenedor">
             <img id="logo" src="/assets/images/Captura_desde_2024-10-29_13-09-01-removebg-preview.png" alt="This is the Ding Dom banner ">
-           <button class="abrir-menu"> <img src="assets/icons/icons8-menu-96.png" alt="amburguesa"></button>
+           <button class="abrir-menu"> <img src="/assets/icons/icons8-menu-96.png" alt="amburguesa"></button>
             <nav class="nav" id="nav">
-                <button id="cerrar"><img src="assets/icons/icons8-x-64.png" alt="x"></button>
+                <button id="cerrar"><img src="/assets/icons/icons8-x-64.png" alt="x"></button>
                 <ul class="nav-list">
                   <li><a href="/index.html">HOME</a></li>
                   <li><a href="/views/instrument.html">INSTRUMENTS</a></li>
@@ -27,61 +27,71 @@
     </header>
    
     <div class="contenedorfotos">
+        <button id="retroceder"><img src="/assets/icons/atras.png" alt=""></button>
         <div>
-            <img src="/assets/images/Fotos del equipo/Jorge.png" alt="Foto de un integrante del equipo">
+            <img class="integrante" src="/assets/images/Fotos del equipo/Jorge.png" alt="Foto de un integrante del equipo">
             <h3>Jorge Bastori</h3>
             <h5>Desarrollador Frontend</h5>
+            <button class="ampliar"><img src="/assets/icons/Flecha_ampliar.png" alt="Boton abajo"></button>
             <p>He always brightens everyone's day, he's a partner you wish you had,Passionate about video game programming and music.!A great workmate¡.</p>
         </div>
 
         <div>
-            <img src="/assets/images/Fotos del equipo/Luisa.png" alt="Foto de un integrante del equipo">
+            <img class="integrante" src="/assets/images/Fotos del equipo/Luisa.png" alt="Foto de un integrante del equipo">
             <h3>Luisa Moreno</h3>
             <h5>Desarrollador Frontend</h5>
+            <button class="ampliar"><img src="/assets/icons/Flecha_ampliar.png" alt="Boton abajo"></button>
             <p>She is a very kind person always giving a hand to those who need it most, A very intelligent person capable of everything. !A great work partner¡</p>
         </div>
 
         <div>
-            <img src="/assets/images/Fotos del equipo/Lola.png" alt="Foto de un integrante del equipo">
+            <img class="integrante" src="/assets/images/Fotos del equipo/Lola.png" alt="Foto de un integrante del equipo">
             <h3>Lola Borges</h3>
             <h5>Desarrollador Frontend</h5>
+            <button class="ampliar"><img src="/assets/icons/Flecha_ampliar.png" alt="Boton abajo"></button>
             <p>A friend a great companion always making friends wherever she goes with a cheerful smile, a great follower of the kitchen. !A great work partner¡</p>
         </div>
 
         <div>
-            <img src="/assets/images/Fotos del equipo/Jiale.png" alt="Foto de un integrante del equipo">
+            <img class="integrante" src="/assets/images/Fotos del equipo/Jiale.png" alt="Foto de un integrante del equipo">
             <h3>Jiale Chen</h3>
             <h5>Desarrollador Frontend</h5>
+            <button class="ampliar"><img src="/assets/icons/Flecha_ampliar.png" alt="Boton abajo"></button>
             <p>A friend who always makes an effort, A friend who loves video games, always teaching others, he likes programming very much. !A great work partner¡</p>
         </div>
 
         <div>
-            <img src="/assets/images/Fotos del equipo/Hassan.png" alt="Foto de un integrante del equipo">
+            <img class="integrante" src="/assets/images/Fotos del equipo/Hassan.png" alt="Foto de un integrante del equipo">
             <h3>Hassan Isse</h3>
             <h5>Desarrollador Frontend</h5>
+            <button class="ampliar"><img src="/assets/icons/Flecha_ampliar.png" alt="Boton abajo"></button>
             <p>A traveler a good companion always trying to move forward an example to be followed  always kind to people, proud of the place where he was born. !A great work partner¡</p>
         </div>
 
         <div>
-            <img src="/assets/images/Fotos del equipo/Harshdeep.png" alt="Foto de un integrante del equipo">
+            <img class="integrante" src="/assets/images/Fotos del equipo/Harshdeep.png" alt="Foto de un integrante del equipo">
             <h3>Harshdeep Singh</h3>
             <h5>Desarrollador Frontend</h5>
+            <button class="ampliar"><img src="/assets/icons/Flecha_ampliar.png" alt="Boton abajo"></button>
             <p>A friend and colleague who always strives to move forward, always attentive to others and with a cheerful smile. !A great work partner¡</p>
         </div>
 
         <div>
-            <img src="/assets/images/Fotos del equipo/Juan.png" alt="Foto de un integrante del equipo">
+            <img class="integrante" src="/assets/images/Fotos del equipo/Juan.png" alt="Foto de un integrante del equipo">
             <h3>Juan Gonzales</h3>
             <h5>Desarrollador Frontend</h5>
+            <button class="ampliar"><img src="/assets/icons/Flecha_ampliar.png" alt="Boton abajo"></button>
             <p>A person who tries hard even though he is not very intelligent, always practices and tries hard, a great partner who will have your back. !A great work partner¡</p>
         </div>
 
         <div>
-            <img src="/assets/images/Fotos del equipo/IMG_0521-removebg-preview.png" alt="Foto de un integrante del equipo">
-            <h3>faryal chaudhry</h3>
+            <img class="integrante" src="/assets/images/Fotos del equipo/IMG_0521-removebg-preview.png" alt="Foto de un integrante del equipo">
+            <h3>Faryal Chaudhry</h3>
+            <h5>Desarrollador Frontend</h5>
+            <button class="ampliar"><img src="/assets/icons/Flecha_ampliar.png" alt="Boton abajo"></button>
             <p>She is a very disciplined colleague , always attentive to listen to others a reliable co-worker. !A great work partner¡</p>
         </div>    
-        <button id="retroceder"><img src="/assets/icons/atras.png" alt=""></button>
+        
         <button id="avanzar"><img src="/assets/icons/adelante.png" alt=""></button>
 
     </div>
@@ -96,7 +106,7 @@
 
     </footer>
         
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
     <script src="/js/about-us.js"></script>
 </body>
 </html>
