--- a/views/instrument.html
+++ b/views/instrument.html
@@ -62,7 +62,7 @@
             <a href="https://www.instagram.com/" target="-blank"><img src="/assets/icons/icons8-instagram-48(1).png" alt="Icon instagram"></a>
             <a href="https://x.com/?lang=en" target="_blank"><img src="/assets/icons/icons8-x-50.png" alt="Icon x"></a>    
         </div>
-        <p class="parrafo-footer">© 2024 Ding Dom. Todos los derechos reservados.</p>
+        <p class="parrafo-footer">© 2024 Ding Dom. All rights reserved.</p>
 
     </footer>
         
