--- a/views/instrument.html
+++ b/views/instrument.html
@@ -31,9 +31,30 @@
             <div>
                 <h2>PIANO</h2>
                 <p>The piano is a percussive stringed instrument with 24 keys that produces sound by striking strings with hammers. It is versatile and is used in various musical genres, allowing melodies and harmonies to be played at the same time, making it essential for performance and composition.</p>
-                <button>TRY IT YOURSELF</button>
+                 <!-- Botón para abrir el modal -->
+            <button id="openModal">Abrir Modal</button>
+
+            <!-- Modal -->
+            <div id="modal" class="modal">
+                <div class="modal-content">
+                <span class="close-btn">&times;</span>
+                <h2>STARTS TO PLAY</h2>
+                <div class="main">
+                    <div class="container">
+                        <div class="piano-container">
+                        <div class="main">
+                            <div class="container">
+                                <div class="piano-container"></div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                </div>
             </div>
-        </div>
+                    </div>
+       
 
         <div class="contenedores">
             <iframe src="https://www.youtube.com/embed/2xc55G7vVxg?si=80ChZe_rNLkNNWXw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -67,6 +88,6 @@
     </footer>
         
     <script src="/js/index.js"></script>
-
+    <script src="../js/piano.js"></script>
 </body>
 </html>
