--- a/css/instruments.css
+++ b/css/instruments.css
@@ -1,4 +1,7 @@
 *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     max-width: 100%;
 }
 
@@ -8,6 +11,7 @@ main{
     flex-direction: column;
     align-items: center;
 }
+
 
 .contenedores{
     max-width: 80%;
