--- a/views/about-us.html
+++ b/views/about-us.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="/css/about-us.css">
     <title>About Us</title>
 </head>
