--- a/css/heroimage.css
+++ b/css/heroimage.css
@@ -1,78 +1,72 @@
-*{
-    max-width: 100%;
+html {
+    scroll-behavior: smooth;
 }
 
-.heroimage{
-    width: 100svh;
-    height: 90dvh;
+* {
+    box-sizing: border-box;
+}
+
+.heroimage {
+    width: 100%;
+    height: 90vh;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
 }
-
 
 .heroimage video {
-
+    width: 100%;
 }
 
-.no-music{
+.no-music {
     width: 30px;
     height: 30px;
     position: relative;
     top: 27vh;
     margin-left: auto;
-
-    
 }
 
-.go-home{
+.go-home {
     width: 30px;
     height: 30px;
     position: relative;
     top: 25vh;
 }
 
-.heroimage p{
-   font-size: 16px;
-    margin: 0;
-
+.heroimage p {
+    font-family: "neucha";
+ font-size: 16px;
+ margin: 0;
 }
 
-main img{
+main img {
     max-width: 100%;
     border-radius: 5px;
 }
 
-main p{
-border: 10px;
-border-radius: 5px;
-background-color: rgba(142, 209, 213, 0.6);
-color: black;
-max-width: 100%;
-font-size: 16px;
-text-align: center;
-padding: 10px;
-margin: 5px;
+main p {
+    
+    border-radius: 5px;
+    background-color: rgba(142, 209, 213, 0.6);
+    max-width: 100%;
+    font-size: 16px;
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
 }
 
-@media (min-width:800px){
-
- 
-   .heroimage{
-    width: 100%;
-    height: 39em;
-
-   }
-
-    .heroimage video{
-      width: 30%;
+@media (min-width: 800px) {
+    .heroimage {
+        height: 39em;
     }
 
-    .descripcion{
-        border: 10px;
+    .heroimage video {
+        width: 30%;
+    }
+
+    .descripcion {
         border-radius: 5px;
         background-color: rgba(142, 209, 213, 0.6);
         position: relative;
@@ -83,10 +77,6 @@ margin: 5px;
         left: 35vh;
         padding: 20px;
         font-family: "Neucha";
-
-        }
         
-
-
+    }
 }
-
