--- a/css/piano.css
+++ b/css/piano.css
@@ -93,7 +93,7 @@
   }
   
   
-  @media (max-width: 799px) {
+  @media (max-width: 899px) {
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
     * {
       margin: 0;
@@ -108,7 +108,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: 250px;
       text-align: center;
     }
     .container > h1 {
@@ -124,6 +124,7 @@
       background-color: transparent;
       box-shadow: 0 2em 4em rgba(7, 0, 53, 0.25);
       position: relative;
+      margin-top: -150px;
     }
     .white-key {
       width: 4.37em;
@@ -150,34 +151,34 @@
       background-color: #24272e;
     }
     .black-key:nth-child(1) {
-      left: 4em;
+      left: 3em;
     }
     .black-key:nth-child(2) {
-      left: 8.37em;
+      left: 6.5em;
     }
     .black-key:nth-child(3) {
-      left: 17.12em;
+      left: 13.3em;
     }
     .black-key:nth-child(4) {
-      left: 21.5em;
+      left: 16.7em;
     }
     .black-key:nth-child(5) {
-      left: 25.87em;
+      left: 20em;
     }
     .black-key:nth-child(6) {
-      left: 34.62em;
+      left: 26.7em;
     }
     .black-key:nth-child(7) {
-      left: 39em;
+      left: 30em;
     }
     .black-key:nth-child(8) {
-      left: 47.75em;
+      left: 36.8em;
     }
     .black-key:nth-child(9) {
-      left: 52.12em;
+      left: 40.3em;
     }
     .black-key:nth-child(10) {
-      left: 56.5em;
+      left: 43.5em;
     }
     .key-active {
       background-color: #ebebeb;
@@ -201,7 +202,7 @@
   }
   
   
-  @media (min-width: 800px) {
+  @media (min-width: 900px) {
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
     * {
       margin: 0;
@@ -216,8 +217,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: 260px;
       text-align: center;
+
     }
     .container > h1 {
       font-size: 60px;
