--- a/css/styleCarrusel.css
+++ b/css/styleCarrusel.css
@@ -76,6 +76,7 @@
         cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
         transition: background-color 0.3s; /* Transición suave para el cambio de color de fondo */
         font-size: 16px; /* Ajusta el tamaño del texto si es necesario */
+        text-decoration: none;
     
 }
 
@@ -152,6 +153,8 @@
     border-radius: 4px; /* Bordes redondeados */
     cursor: pointer; /* Cursor de mano */
     font-size: 20px;
+    
+    
 }
 
 /* Botones de navegación - Estilo para flechas sin fondo */
