--- a/css/heroimage.css
+++ b/css/heroimage.css
@@ -7,9 +7,9 @@ html {
 }
 
 .heroimage {
-    width: 100%;
-    height: 90vh;
-    background-color: white;
+    /* width: 100%; */
+    height: 100vh;
+    /* background-color: white; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,10 +58,6 @@ main p {
 }
 
 @media (min-width: 800px) {
-    .heroimage {
-        height: 39em;
-    }
-
     .heroimage video {
         width: 30%;
     }
