--- a/css/style.css
+++ b/css/style.css
@@ -23,17 +23,36 @@ a {
 }
 
 /* Container for navigation, aligns items with flexbox, centers text,
-   spaces items between, adds padding, background color, and sets height */
+spaces items between, adds padding, background color, and sets height */
 .contenedor {
     display: flex;
     text-align: center;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem;
     background-color: black;
-    height: 65px;
-    margin-bottom: 0;
+    /* height: 65px; */
+    /* margin-bottom: 0; */
+    /* margin-top: 300px; */
 }
 
+#logo{
+    width: 200px;
+}
+
+.nav-list {
+    list-style-type: none;
+    display: flex;
+    gap: 9rem; /* Ajusta el espacio entre los elementos */
+    margin-left: -800px; /* Empuja la lista a la derecha */
+    font-size: 40px; /* Ajusta el tamaño si es necesario */
+}
+
+.nav-list a {
+  
+    color: #65D5DB; /* Color del texto */
+    text-decoration: none;
+}
 /* Navigation links styling: removes underline and applies color */
 .nav-list li a {
      text-decoration: none;
@@ -74,7 +93,12 @@ footer {
 }
 
 /* ---------- Media Query for screens 768px and smaller ---------- */
-@media (max-width: 768px) {
+@media (max-width: 799px) {
+
+    
+    .contenedor{
+        margin-top: 130px;
+    }
 
     /* Flexbox for nav items, space between items, and increases font size */
     .nav-list {
@@ -90,20 +114,22 @@ footer {
         display: block;
         background-color: black;
         border: black;
-        margin-left: -75px;
+        margin-left: -97px;
+        margin-top: -6px;
     }
 
     /* Logo styling: sets dimensions and margins */
     #logo {
         width: 250px;
-        height: 50px;
         margin-top: 0;
-        margin-left: -14px;
     }
 
     /* Menu button image size */
     .abrir-menu img {
-        width: 30px;
+        width: 45px;
+        
+
+        
     }
 
     /* Shows the close button with black background */
@@ -173,27 +199,5 @@ footer {
     }
 }
 
-@media (min-width: 800px) {
-    .contenedor {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem;
-        height: 100px;
-    }
 
-    .nav-list {
-        list-style-type: none;
-        display: flex;
-        gap: 3rem; /* Ajusta el espacio entre los elementos */
-        margin-left: auto; /* Empuja la lista a la derecha */
-        font-size: 25px; /* Ajusta el tamaño si es necesario */
-    }
-
-    .nav-list a {
-        font-size: 60px;
-        color: #65D5DB; /* Color del texto */
-        text-decoration: none;
-    }
-}
 
