--- a/css/styleCarrusel.css
+++ b/css/styleCarrusel.css
@@ -216,9 +216,12 @@
     }
 
     .slide img {
-        width: 185px;
-        height: 150px;
+        width: auto;
+        height: auto;
         margin: 15px auto;
+        max-width: 300px;
+        max-height: 180px;
+
     }
 
     .slide h2 {
