--- a/views/instrument.html
+++ b/views/instrument.html
@@ -48,6 +48,8 @@
                             </div>
                         </div>
                     </div>
+                    <img src="/assets/images/rotate-your-phone-landscape-icon-free-vector-removebg-preview.png" alt="">
+
                 </div>
             </div>        
         </div>
