Se crea Modal para la guitarra

--- a/views/instrument.html
+++ b/views/instrument.html
@@ -70,7 +70,7 @@
             <div>
                 <h2>GUITAR</h2>
                 <p>The guitar is a stringed instrument, usually with six strings, played by plucking or strumming. There are acoustic guitars, which produce sound naturally, and electric guitars, which amplify it. It is versatile and is used in various musical genres, allowing melodies and chords to be played both solo and in ensemble.</p>
-                <button id="openModal">STARTS TO PLAY</button>
+                <button id="openModal2">STARTS TO PLAY</button>
 
             </div>    
             <div id="modal2" class="modal2">
