--- a/views/about-us.html
+++ b/views/about-us.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="/css/about-us.css">
+    <link rel="stylesheet" href="../css/about-us.css">
     <title>About Us</title>
 </head>
 <body>
     <header>
         <div class="contenedor">
-            <img id="logo" src="/assets/images/logo-laptop.png" alt="This is the Ding Dom banner ">
+            <img id="logo" src="../assets/images/logo-laptop.png" alt="This is the Ding Dom banner ">
            <button class="abrir-menu"> <img src="/assets/icons/icons8-menu-96.png" alt="amburguesa"></button>
             <nav class="nav" id="nav">
                 <button id="cerrar"><img src="/assets/icons/icons8-x-64.png" alt="x"></button>
