--- a/views/instrument.html
+++ b/views/instrument.html
@@ -6,8 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/instruments.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/instruments.css">
     <link rel="stylesheet" href="/css/guitar.css">
     <link rel="stylesheet" href="/css/tambor.css">
     <link rel="stylesheet" href="/css/piano.css">
@@ -17,7 +17,7 @@
     <header>
         <div class="contenedor">
             <img id="logo" src="/assets/images/logo-laptop.png" alt="This is the Ding Dom banner ">
-           <button class="abrir-menu"> <img src="/assets/icons/icons8-menu-96.png" alt="amburguesa"></button>
+           <button class="abrir-menu"> <img src="../assets/icons/icons8-menu-96.png" alt="amburguesa"></button>
             <nav class="nav" id="nav">
                 <button id="cerrar"><img src="/assets/icons/icons8-x-64.png" alt="x"></button>
                 <ul class="nav-list">
@@ -78,15 +78,15 @@
                                 <div class="drum cymbal crash1" data-note="crash1"></div>
                                 <div class="drum cymbal crash2" data-note="crash2"></div>
                             </div>
-                        <audio id="kick" src="/assets/sonido/kick.wav" hidden preload="auto"></audio>
-                        <audio id="kick2" src="/assets/sonido/kick.wav" hidden preload="auto"></audio>
-                        <audio id="snare" src="/assets/sonido/snare.wav" hidden preload="auto"></audio>
-                        <audio id="hithat" src="/assets/sonido/hihat.wav" hidden preload="auto"></audio>
-                        <audio id="tom1" src="/assets/sonido/tom1.wav" hidden preload="auto"></audio>
-                        <audio id="tom2" src="/assets/sonido/tom2.wav" hidden preload="auto"></audio>
-                        <audio id="tom3" src="/assets/sonido/tom3.wav" hidden preload="auto"></audio>
-                        <audio id="crash1" src="/assets/sonido/crash1.wav" hidden preload="auto"></audio>
-                        <audio id="crash2" src="/assets/sonido/crash2-VEED.mp3" hidden preload="auto"></audio>
+                        <audio id="kick" src="../assets/sonido/kick.wav" hidden preload="auto"></audio>
+                        <audio id="kick2" src="../assets/sonido/kick.wav" hidden preload="auto"></audio>
+                        <audio id="snare" src="../assets/sonido/snare.wav" hidden preload="auto"></audio>
+                        <audio id="hithat" src="../assets/sonido/hihat.wav" hidden preload="auto"></audio>
+                        <audio id="tom1" src="../assets/sonido/tom1.wav" hidden preload="auto"></audio>
+                        <audio id="tom2" src="../assets/sonido/tom2.wav" hidden preload="auto"></audio>
+                        <audio id="tom3" src="../assets/sonido/tom3.wav" hidden preload="auto"></audio>
+                        <audio id="crash1" src="../assets/sonido/crash1.wav" hidden preload="auto"></audio>
+                        <audio id="crash2" src="../assets/sonido/crash2-VEED.mp3" hidden preload="auto"></audio>
                     </div>
                 </div>
         </div>
